proxy sample